--- a/App/Views/viewsTemplate/base.html.twig
+++ b/App/Views/viewsTemplate/base.html.twig
@@ -2,13 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Origins Framework</title>
+    <title>{{ title }}</title>
+    {% block css %}
     <link rel="stylesheet" href="./css/main.css">
+    {% endblock %}
 </head>
 <body>
-    <div class='center'>
-        <h2>{{ welcome }}</h2>
-        <h1>{{ origins }}</h1>
-    </div>
+{% block content %}
+{% endblock %}
+
+{% block js %}
+{% endblock %}
 </body>
 </html>
