--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4,6 +4,7 @@ html, body {
     height: 100%;
     font-family: 'Raleway', sans-serif;
     background-color: #FFF5F2;
+    overflow: hidden;
 }
 
 ::-moz-selection {
