--- a/App/Views/viewsTemplate/base.html.twig
+++ b/App/Views/viewsTemplate/base.html.twig
@@ -2,7 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{{ title }}</title>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>{% block title %}{% endblock %} | Origin Framework </title>
     {% block css %}
     <link rel="stylesheet" href="./css/main.css">
     {% endblock %}
