--- a/public/css/404.css
+++ b/public/css/404.css
@@ -14,6 +14,7 @@ body {
     font-family: 'Raleway', sans-serif;
     background-color: #342643;
     height: 100%;
+    overflow: hidden;
 }
 
 .text-wrapper {
@@ -40,13 +41,13 @@ body {
 .title {
     font-size: 6em;
     font-weight: 700;
-    color: #EE4B5E;
+    color: #FFBE0C;
 }
 
 .subtitle {
     font-size: 40px;
     font-weight: 700;
-    color: #1FA9D6;
+    color: #000000;
 }
 
 .buttons {
@@ -54,17 +55,17 @@ body {
 }
 .buttons a.button {
     font-weight: 700;
-    border: 2px solid #EE4B5E;
+    border: 2px solid #FFBE0C;
     text-decoration: none;
     padding: 15px;
     text-transform: uppercase;
-    color: #EE4B5E;
+    color: #FFBE0C;
     border-radius: 26px;
     -webkit-transition: all 0.2s ease-in-out;
     transition: all 0.2s ease-in-out;
 }
 .buttons a.button:hover {
-    background-color: #EE4B5E;
+    background-color: #ffc335;
     color: white;
     -webkit-transition: all 0.2s ease-in-out;
     transition: all 0.2s ease-in-out;
