--- a/public/css/404.css
+++ b/public/css/404.css
@@ -9,7 +9,7 @@ html {
 }
 
 body {
-    background: url(http://i.imgur.com/76NZB7A.gif) no-repeat center center fixed;
+    background: url(https://media.giphy.com/media/rpBssnLy8drLq/giphy.gif) no-repeat center center fixed;
     background-size: cover;
     font-family: 'Raleway', sans-serif;
     background-color: #342643;
@@ -41,13 +41,13 @@ body {
 .title {
     font-size: 6em;
     font-weight: 700;
-    color: #FFBE0C;
+    color: #FFFFFF;
 }
 
 .subtitle {
     font-size: 40px;
     font-weight: 700;
-    color: #000000;
+    color: rgba(66, 143, 190, 0.8);
 }
 
 .buttons {
@@ -55,18 +55,18 @@ body {
 }
 .buttons a.button {
     font-weight: 700;
-    border: 2px solid #FFBE0C;
+    border: 2px solid #FFFFFF;
     text-decoration: none;
     padding: 15px;
     text-transform: uppercase;
-    color: #FFBE0C;
+    color: #FFFFFF;
     border-radius: 26px;
     -webkit-transition: all 0.2s ease-in-out;
     transition: all 0.2s ease-in-out;
 }
 .buttons a.button:hover {
-    background-color: #ffc335;
-    color: white;
+    background-color: #FFFFFF;
+    color: #000000;
     -webkit-transition: all 0.2s ease-in-out;
     transition: all 0.2s ease-in-out;
 }
