App demo Login/Sign Up works

--- a/App/Views/error/404.html.twig
+++ b/App/Views/error/404.html.twig
@@ -1,4 +1,4 @@
-{% extends "./viewsTemplate/base.html.twig" %}
+{% extends "./baseTemplate/base.html.twig" %}
 
 {% block css %}
     <link rel="stylesheet" href="/css/404.css">
