--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,7 +3,13 @@
 html, body {
     height: 100%;
     font-family: 'Raleway', sans-serif;
-    background-color: #000000;
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#cfd8dc+0,607d8b+100,b0bec5+100 */
+    background: #cfd8dc; /* Old browsers */
+    background: -moz-linear-gradient(-45deg,  #cfd8dc 0%, #607d8b 100%, #b0bec5 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(-45deg,  #cfd8dc 0%,#607d8b 100%,#b0bec5 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(135deg,  #cfd8dc 0%,#607d8b 100%,#b0bec5 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cfd8dc', endColorstr='#b0bec5',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+    overflow: hidden;
 }
 
 .center {
@@ -52,9 +58,6 @@ html, body {
     color: #FFFFFF;
     margin-top: 10px;
     cursor: pointer;
-}
-.center .demo > .btn_blue {
-    border-color: rgba(66, 143, 190, 0.8);
 }
 .center .demo > .btn_blue:hover {
     background-color: rgba(66, 143, 190, 0.2);
