--- a/App/Views/index.html.twig
+++ b/App/Views/index.html.twig
@@ -1,16 +1,18 @@
-{% extends "viewsTemplate/base.html.twig" %}
+{% extends "baseTemplate/base.html.twig" %}
 {% block title %}Home{% endblock %}
 {% block content %}
     <div class='center'>
         <h2>{{ hello }}</h2>
         <h1>{{ origins }}</h1>
         <div class="demo">
-            <button onclick="login()" class="login btn_blue">DEMO APP</button>
+            <button class="login btn_blue">DEMO APP</button>
         </div>
     </div>
 {% endblock %}
 {% block js %}
     <script>
+        document.querySelector('.login').addEventListener("click", (e) => login());
+
         function login() {
             location.replace("/login");
         }
