--- a/App/Views/login.html.twig
+++ b/App/Views/login.html.twig
@@ -1,4 +1,4 @@
-{% extends "viewsTemplate/base.html.twig" %}
+{% extends "baseTemplate/base.html.twig" %}
 {% block title %}Login{% endblock %}
 {% block css %}
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
@@ -15,14 +15,14 @@
                     <div class="col_md_login">
                         <div class="cont_ba_opcitiy">
                             <h2>LOGIN</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            <p>Cada persona que vive en este planeta tiene un par de ojos únicos, cada uno con su propio universo.</p>
                             <button class="btn_login" onclick="cambiar_login()">LOGIN</button>
                         </div>
                     </div>
                     <div class="col_md_sign_up">
                         <div class="cont_ba_opcitiy">
                             <h2>SIGN UP</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            <p>¿Cual es tu flor favorita? -El diente de león. -¿Por qué? -Porque son libres, son silvestres y no se pueden comprar</p>
                             <button class="btn_sign_up" onclick="cambiar_sign_up()">SIGN UP</button>
                         </div>
                     </div>
@@ -43,8 +43,8 @@
                         <a href="#" onclick="ocultar_login_sign_up()" ><i class="material-icons">&#xE5C4;</i></a>
                         <h2>LOGIN</h2>
                         <form action="login/auth" method="post">
-                            <input name="name" type="text" placeholder="Your name" required/>
-                            <input name="city" type="text" placeholder="Your city" required/>
+                            <input name="email" type="email" placeholder="Your email" required/>
+                            <input name="password" type="password" placeholder="Your password" required/>
                             <button class="btn_login" onclick="cambiar_login()">LOGIN</button>
                         </form>
                     </div>
@@ -54,8 +54,8 @@
                         <h2>SIGN UP</h2>
                         <form method="post" action="login/register">
                             <input name="name" type="text" placeholder="Your name" required/>
-                            <input name="age" type="number" placeholder="Your age" required/>
-                            <input name="city" type="text" placeholder="Your city" required/>
+                            <input name="email" type="email" placeholder="Your email" required/>
+                            <input name="password" type="password" placeholder="Your password" required/>
                             <button class="btn_sign_up" onclick="cambiar_sign_up()">SIGN UP</button>
                         </form>
                     </div>
