--- a/public/css/404.css
+++ b/public/css/404.css
@@ -9,7 +9,7 @@ html {
 }
 
 body {
-    background: url(https://media.giphy.com/media/rpBssnLy8drLq/giphy.gif) no-repeat center center fixed;
+    background: url('../img/iorigins.gif') no-repeat center center fixed;
     background-size: cover;
     font-family: 'Raleway', sans-serif;
     background-color: #342643;
@@ -47,7 +47,7 @@ body {
 .subtitle {
     font-size: 40px;
     font-weight: 700;
-    color: rgba(66, 143, 190, 0.8);
+    color: #607D8B;
 }
 
 .buttons {
