refactor + add default auth controllers

--- a/App/Views/index.html.twig
+++ b/App/Views/index.html.twig
@@ -11,10 +11,8 @@
 {% endblock %}
 {% block js %}
     <script>
-        document.querySelector('.login').addEventListener("click", (e) => login());
-
-        function login() {
-            location.replace("/login");
-        }
+        document.querySelector('.login').addEventListener("click", () => {
+            location.replace("/login")
+        })
     </script>
 {% endblock %}
