--- a/App/Views/login.html.twig
+++ b/App/Views/login.html.twig
@@ -1,8 +1,7 @@
 {% extends "baseTemplate/base.html.twig" %}
 {% block title %}Login{% endblock %}
 {% block css %}
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-          rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="/css/login.css">
 {% endblock %}
 
