example CRUD products

--- a/App/Views/index.html.twig
+++ b/App/Views/index.html.twig
@@ -5,7 +5,7 @@
         <h2>{{ hello }}</h2>
         <h1>{{ origins }}</h1>
         <div class="demo">
-            <a href="/shop">GO TO EXAMPLE</a>
+            <a href="/producte">GO TO EXAMPLE</a>
         </div>
     </div>
 {% endblock %}
