--- a/App/Views/productes/producte.html.twig
+++ b/App/Views/productes/producte.html.twig
@@ -28,7 +28,7 @@
                                 {% endif %}
                             {% endfor %}
                         </select>
-                        <label for="familia">Materialize Select</label>
+                        <label for="familia">Familia</label>
                     </div>
                     <div class="input-field col s12">
                         <textarea
